# PythonHomework

./: .gitignore  Binary Search.py  pyproject.toml
src/: app.py  asgi.py
