[tool.poetry]
name = "webservice"
version = "0.1.0"
description = ""
authors = ["MaksimHank <orthopedicsalon5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
